# internal/generated/api/v1/vendor.pb.go
@@ -1,0 +1,242 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// source: v1/vendor.proto
+
+package v1
+
+import (
+	fmt "fmt"
+	proto "github.com/golang/protobuf/proto"
+	math "math"
+)
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ = proto.Marshal
+var _ = fmt.Errorf
+var _ = math.Inf
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the proto package it is being compiled against.
+// A compilation error at this line likely means your copy of the
+// proto package needs to be updated.
+const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
+
+type Provider int32
+
+const (
+	Provider_GITHUB Provider = 0
+	Provider_TRELLO Provider = 1
+)
+
+var Provider_name = map[int32]string{
+	0: "GITHUB",
+	1: "TRELLO",
+}
+
+var Provider_value = map[string]int32{
+	"GITHUB": 0,
+	"TRELLO": 1,
+}
+
+func (x Provider) String() string {
+	return proto.EnumName(Provider_name, int32(x))
+}
+
+func (Provider) EnumDescriptor() ([]byte, []int) {
+	return fileDescriptor_e6e7fc3250f020e9, []int{0}
+}
+
+type Secret struct {
+	Token                string   `protobuf:"bytes,1,opt,name=token,proto3" json:"token,omitempty"`
+	Provider             Provider `protobuf:"varint,2,opt,name=provider,proto3,enum=octolab.api.tablo.v1.Provider" json:"provider,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *Secret) Reset()         { *m = Secret{} }
+func (m *Secret) String() string { return proto.CompactTextString(m) }
+func (*Secret) ProtoMessage()    {}
+func (*Secret) Descriptor() ([]byte, []int) {
+	return fileDescriptor_e6e7fc3250f020e9, []int{0}
+}
+
+func (m *Secret) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_Secret.Unmarshal(m, b)
+}
+func (m *Secret) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_Secret.Marshal(b, m, deterministic)
+}
+func (m *Secret) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_Secret.Merge(m, src)
+}
+func (m *Secret) XXX_Size() int {
+	return xxx_messageInfo_Secret.Size(m)
+}
+func (m *Secret) XXX_DiscardUnknown() {
+	xxx_messageInfo_Secret.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_Secret proto.InternalMessageInfo
+
+func (m *Secret) GetToken() string {
+	if m != nil {
+		return m.Token
+	}
+	return ""
+}
+
+func (m *Secret) GetProvider() Provider {
+	if m != nil {
+		return m.Provider
+	}
+	return Provider_GITHUB
+}
+
+type Vendor struct {
+	Name                 string   `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	Desc                 string   `protobuf:"bytes,2,opt,name=desc,proto3" json:"desc,omitempty"`
+	Type                 Provider `protobuf:"varint,3,opt,name=type,proto3,enum=octolab.api.tablo.v1.Provider" json:"type,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *Vendor) Reset()         { *m = Vendor{} }
+func (m *Vendor) String() string { return proto.CompactTextString(m) }
+func (*Vendor) ProtoMessage()    {}
+func (*Vendor) Descriptor() ([]byte, []int) {
+	return fileDescriptor_e6e7fc3250f020e9, []int{1}
+}
+
+func (m *Vendor) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_Vendor.Unmarshal(m, b)
+}
+func (m *Vendor) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_Vendor.Marshal(b, m, deterministic)
+}
+func (m *Vendor) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_Vendor.Merge(m, src)
+}
+func (m *Vendor) XXX_Size() int {
+	return xxx_messageInfo_Vendor.Size(m)
+}
+func (m *Vendor) XXX_DiscardUnknown() {
+	xxx_messageInfo_Vendor.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_Vendor proto.InternalMessageInfo
+
+func (m *Vendor) GetName() string {
+	if m != nil {
+		return m.Name
+	}
+	return ""
+}
+
+func (m *Vendor) GetDesc() string {
+	if m != nil {
+		return m.Desc
+	}
+	return ""
+}
+
+func (m *Vendor) GetType() Provider {
+	if m != nil {
+		return m.Type
+	}
+	return Provider_GITHUB
+}
+
+type Bucket struct {
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *Bucket) Reset()         { *m = Bucket{} }
+func (m *Bucket) String() string { return proto.CompactTextString(m) }
+func (*Bucket) ProtoMessage()    {}
+func (*Bucket) Descriptor() ([]byte, []int) {
+	return fileDescriptor_e6e7fc3250f020e9, []int{2}
+}
+
+func (m *Bucket) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_Bucket.Unmarshal(m, b)
+}
+func (m *Bucket) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_Bucket.Marshal(b, m, deterministic)
+}
+func (m *Bucket) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_Bucket.Merge(m, src)
+}
+func (m *Bucket) XXX_Size() int {
+	return xxx_messageInfo_Bucket.Size(m)
+}
+func (m *Bucket) XXX_DiscardUnknown() {
+	xxx_messageInfo_Bucket.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_Bucket proto.InternalMessageInfo
+
+type Source struct {
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *Source) Reset()         { *m = Source{} }
+func (m *Source) String() string { return proto.CompactTextString(m) }
+func (*Source) ProtoMessage()    {}
+func (*Source) Descriptor() ([]byte, []int) {
+	return fileDescriptor_e6e7fc3250f020e9, []int{3}
+}
+
+func (m *Source) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_Source.Unmarshal(m, b)
+}
+func (m *Source) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_Source.Marshal(b, m, deterministic)
+}
+func (m *Source) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_Source.Merge(m, src)
+}
+func (m *Source) XXX_Size() int {
+	return xxx_messageInfo_Source.Size(m)
+}
+func (m *Source) XXX_DiscardUnknown() {
+	xxx_messageInfo_Source.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_Source proto.InternalMessageInfo
+
+func init() {
+	proto.RegisterEnum("octolab.api.tablo.v1.Provider", Provider_name, Provider_value)
+	proto.RegisterType((*Secret)(nil), "octolab.api.tablo.v1.Secret")
+	proto.RegisterType((*Vendor)(nil), "octolab.api.tablo.v1.Vendor")
+	proto.RegisterType((*Bucket)(nil), "octolab.api.tablo.v1.Bucket")
+	proto.RegisterType((*Source)(nil), "octolab.api.tablo.v1.Source")
+}
+
+func init() { proto.RegisterFile("v1/vendor.proto", fileDescriptor_e6e7fc3250f020e9) }
+
+var fileDescriptor_e6e7fc3250f020e9 = []byte{
+	// 286 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x91, 0xc1, 0x4b, 0xfb, 0x30,
+	0x14, 0xc7, 0x7f, 0xdd, 0x6f, 0xd6, 0xed, 0x81, 0x3a, 0xc2, 0x0e, 0xb3, 0x88, 0x8c, 0x9e, 0x86,
+	0x87, 0x48, 0xeb, 0xcd, 0x63, 0xb7, 0xa1, 0x83, 0x81, 0xd2, 0x6e, 0x1e, 0x76, 0x6b, 0xd3, 0x77,
+	0x28, 0x5b, 0xf3, 0x4a, 0x96, 0x05, 0xfc, 0x5b, 0xfc, 0x67, 0xa5, 0x69, 0xf5, 0xd4, 0x81, 0xb7,
+	0x6f, 0x92, 0x0f, 0x9f, 0xf7, 0x4d, 0x02, 0x37, 0x26, 0x78, 0x34, 0x28, 0x73, 0x52, 0xbc, 0x52,
+	0xa4, 0x89, 0x8d, 0x49, 0x68, 0x3a, 0xa4, 0x19, 0x4f, 0xab, 0x82, 0xeb, 0x34, 0x3b, 0x10, 0x37,
+	0x81, 0x57, 0x63, 0x82, 0xca, 0x92, 0x64, 0x83, 0xf9, 0x3b, 0x70, 0x13, 0x14, 0x0a, 0x35, 0x1b,
+	0xc3, 0x85, 0xa6, 0x3d, 0xca, 0x89, 0x33, 0x75, 0x66, 0xc3, 0xb8, 0x59, 0xb0, 0x67, 0x18, 0x54,
+	0x8a, 0x4c, 0x91, 0xa3, 0x9a, 0xf4, 0xa6, 0xce, 0xec, 0x3a, 0xbc, 0xe7, 0x5d, 0x66, 0xfe, 0xde,
+	0x52, 0xf1, 0x2f, 0xef, 0xe7, 0xe0, 0x7e, 0xd8, 0x4a, 0x8c, 0x41, 0x5f, 0xa6, 0x25, 0xb6, 0x6a,
+	0x9b, 0xeb, 0xbd, 0x1c, 0x8f, 0xc2, 0x5a, 0x87, 0xb1, 0xcd, 0x2c, 0x84, 0xbe, 0xfe, 0xac, 0x70,
+	0xf2, 0xff, 0x4f, 0x93, 0x2c, 0xeb, 0x0f, 0xc0, 0x8d, 0x4e, 0x62, 0x8f, 0xba, 0x4e, 0x09, 0x9d,
+	0x94, 0xc0, 0x07, 0x1f, 0x06, 0x3f, 0x14, 0x03, 0x70, 0x5f, 0x56, 0x9b, 0xd7, 0x6d, 0x34, 0xfa,
+	0x57, 0xe7, 0x4d, 0xbc, 0x5c, 0xaf, 0xdf, 0x46, 0x4e, 0xf8, 0xe5, 0xc0, 0x55, 0x53, 0x2f, 0x41,
+	0x65, 0x0a, 0x81, 0x6c, 0x09, 0x97, 0x73, 0x92, 0x12, 0x85, 0x66, 0x77, 0xdd, 0xa3, 0x9b, 0xa7,
+	0xf2, 0xce, 0x9c, 0xb6, 0x97, 0x9d, 0x03, 0x2c, 0x8a, 0xa3, 0x68, 0x4d, 0xb7, 0xdd, 0xec, 0x76,
+	0xb5, 0xf0, 0xbc, 0x33, 0x1a, 0x2a, 0xf2, 0xa8, 0xbf, 0xeb, 0x99, 0x20, 0x73, 0xed, 0x27, 0x3d,
+	0x7d, 0x07, 0x00, 0x00, 0xff, 0xff, 0x53, 0xf5, 0xc3, 0xbf, 0xde, 0x01, 0x00, 0x00,
+}
